--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "uuid": "^9.0.1"
   },
