--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.14",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.17.0",
     "axios": "^1.6.8",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -22,7 +26,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sonner": "^1.4.41",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.6.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -35,6 +39,7 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.3"
   }
 }
