--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react-dom": "^18.3.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.6.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -38,17 +40,18 @@
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
+    "jest": "^29.7.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.5.3",
-    "jest": "^29.7.0",
     "ts-jest": "^29.1.0",
-    "@types/jest": "^29.5.0"
+    "typescript": "^5.5.3"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "testMatch": ["**/__tests__/**/*.ts"]
+    "testMatch": [
+      "**/__tests__/**/*.ts"
+    ]
   }
 }
